// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cmrt.sdk.job_service.v1;

option java_multiple_files = true;
option java_outer_classname = "JobServiceTestConfigurationKeysProto";
option java_package = "com.google.cmrt.sdk.job_service.v1";

// For faster allocations of sub-messages.
option cc_enable_arenas = true;

// Configuratiion keys for testing.
enum TestClientConfigurationKeys {
  // Invalid key.
  UNKNOWN_TEST_JOB_CLIENT_CONFIGURATION_KEY = 0;
  // Required for GCP. It should be a real project in GCP which is
  // used for your test.
  CMRT_TEST_JOB_CLIENT_OWNER_ID = 1;
  // Optional for GCP. The impersonate SA to talk to cloud storage. If not set,
  // will not use impersonate SA for testing.
  CMRT_TEST_GCP_JOB_CLIENT_IMPERSONATE_SERVICE_ACCOUNT = 2;
  // Optional for GCP. The access token to authenticate the communication to
  // cloud storage.
  CMRT_TEST_GCP_JOB_CLIENT_ACCESS_TOKEN = 3;
  // Optional for AWS. If not set, use the default value us-east-1.
  CMRT_TEST_JOB_CLIENT_REGION = 4;
}
